# slugencode

./: Cargo.toml  LICENSE  README.md
examples/: slugapi.rs
src/: errors.rs  lib.rs  prelude.rs
