[package]
name = "slugencode"
authors = ["silene","0x20CB","DionysianMyst"]
description = "The swiss-army life library for encoding and decoding formats including Hex, Base32, Base58 (not ct), and Base64 in a constant-time manner."
categories = ["cryptography","encoding"]
keywords = ["encoding", "slug", "hex", "constant-time", "base58"]
license = "APACHE 2.0"
readme = "README.md"
repository = "https://github.com/sileneundula/slugencode"
homepage = "https://github.com/sileneundula/slugencode"
version = "0.1.0"
edition = "2024"

[dependencies]
# Constant-Time Encodings (Hex, Base32, Base64)
ct-codecs = "1.1.6"
base32ct = {version = "0.2.2", features=["alloc"]}

# Base58 (fast version)
bs58 = "0.5.1"

# Security
zeroize = "1.8.1"
subtle = "2.6.1"